2009-10-04 Borut Razem <borut.razem AT siol.net>

	* as/asxxsrc/asdata.c, as/asxxsrc/aslex.c, as/asxxsrc/assubr.c,
	  as/asxxsrc/assym.c, as/asxxsrc/asxxxx.h:
	  partially synced with asxxxx v2.0
	* src/ds390/main.c, src/hc08/main.c, src/mcs51/main.c, src/z80/main.c:
	  added -z and -w option to assembler invocation

2009-10-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/string.h,
	* device/lib/_strlen.c: return size_t
	* device/lib/_memchr.c,
	* device/lib/_strcspn.c: cosmetic changes
	* device/lib/sincosf.c,
	* device/lib/cosf.c,
	* device/lib/sinf.c: use BOOL instead of larger int
	* src/z80/gen.c,
	* src/z80/mappings.i: cosmetic changes
	* src/SDCCsymt.c (pointerTypes, mergeDeclSpec, checkSClass): fixed bug 2817646
	  (checkFunction): disabled __naked
	  (dbuf_printTypeChain): more like RFE 2824498, print C-ish
	  (isRestrict): added
	* src/SDCCsymt.h: added IS_RESTRICT, mergeDeclSpec, isRestrict
	* src/SDCC.y: use mergeDeclSpec to fix bug 2817646
	* src/SDCCicode.c (checkPtrQualifiers, checkTypes, geniCodeAssign,
	  geniCodeParms, geniCodeCall): fixed bug 1302048
	* src/SDCCerr.c,
	* src/SDCCerr.h: added warning W_TARGET_LOST_QUALIFIER
	* support/regression/tests/bug-136564.c,
	* support/regression/tests/bug-223113.c,
	* support/regression/tests/bug1839277.c,
	* support/regression/tests/bug2655200.c: added necessary const keywords
	* support/regression/tests/strtok.c: removed incorrect const keyword
	* support/regression/tests/bug2817646.c: new, added
	* .version,
	* doc/sdccman.lyx: bumped version to 2.9.3

2009-10-03 Philipp Klaus Krause <pkk AT spth.de>
	  src/z80/z80-peeph.def:
	  Reenabled unproblematic peephole changes.

2009-10-03 Philipp Klaus Krause <pkk AT spth.de>
	  src/z80/z80-peeph.def:
	  Reverted recent peephole changes.

2009-09-30 Philipp Klaus Krause <pkk AT spth.de>
	  src/SDCCcse.c:
	  A step towards #1923898.

2009-09-29 Philipp Klaus Krause <pkk AT spth.de>
	  src/z80/gen.c,
	  Minor 16-bit addition improvement.
