@@ -339,9 +339,10 @@ initPointer (initList * ilist, sym_link *toType)
   value *val;
   ast *expr;
 
-  if (!ilist) {
+  if (!ilist)
+    {
       return valCastLiteral(toType, 0.0);
-  }
+    }
 
   expr = list2expr (ilist);
 
@@ -358,119 +359,138 @@ initPointer (initList * ilist, sym_link *toType)
       IS_AST_SYM_VALUE (expr->left) &&
       (IS_ARRAY(expr->left->ftype) || IS_PTR(expr->left->ftype)) &&
       compareType(toType, expr->left->ftype) &&
-      IS_AST_LIT_VALUE (expr->right)) {
-    return valForCastAggr (expr->left, expr->left->ftype,
-                           expr->right,
-                           expr->opval.op);
-  }
+      IS_AST_LIT_VALUE (expr->right))
+    {
+      return valForCastAggr (expr->left, expr->left->ftype,
+                             expr->right,
+                             expr->opval.op);
+    }
 
   /* (char *)&a */
   if (IS_AST_OP(expr) && expr->opval.op==CAST &&
-      IS_AST_OP(expr->right) && expr->right->opval.op=='&') {
-    if (compareType(toType, expr->left->ftype)!=1) {
-      werror (W_INIT_WRONG);
-      printFromToType(expr->left->ftype, toType);
+      IS_AST_OP(expr->right) && expr->right->opval.op=='&')
+    {
+      if (compareType(toType, expr->left->ftype)!=1)
+        {
+          werror (W_INIT_WRONG);
+          printFromToType(expr->left->ftype, toType);
+        }
+      // skip the cast ???
+      expr=expr->right;
     }
-    // skip the cast ???
-    expr=expr->right;
-  }
 
-  /* no then we have to do these cludgy checks */
+  /* no then we have to do these kludgy checks */
   /* pointers can be initialized with address of
      a variable or address of an array element */
-  if (IS_AST_OP (expr) && expr->opval.op == '&') {
-    /* address of symbol */
-    if (IS_AST_SYM_VALUE (expr->left)) {
-      val = AST_VALUE (expr->left);
-      val->type = newLink (DECLARATOR);
-      if (SPEC_SCLS (expr->left->etype) == S_CODE) {
-        DCL_TYPE (val->type) = CPOINTER;
-        CodePtrPointsToConst (val->type);
-      }
-      else if (SPEC_SCLS (expr->left->etype) == S_PDATA)
-        DCL_TYPE (val->type) = PPOINTER;
-      else if (SPEC_SCLS (expr->left->etype) == S_XDATA)
-        DCL_TYPE (val->type) = FPOINTER;
-      else if (SPEC_SCLS (expr->left->etype) == S_XSTACK)
-        DCL_TYPE (val->type) = PPOINTER;
-      else if (SPEC_SCLS (expr->left->etype) == S_IDATA)
-        DCL_TYPE (val->type) = IPOINTER;
-      else if (SPEC_SCLS (expr->left->etype) == S_EEPROM)
-        DCL_TYPE (val->type) = EEPPOINTER;
-      else
-        DCL_TYPE (val->type) = POINTER;
-      val->type->next = expr->left->ftype;
-      val->etype = getSpec (val->type);
-      return val;
-    }
+  if (IS_AST_OP (expr) && expr->opval.op == '&')
+    {
+      /* address of symbol */
+      if (IS_AST_SYM_VALUE (expr->left))
+        {
+          STORAGE_CLASS sclass = SPEC_SCLS (expr->left->etype);
+          memmap *oclass = SPEC_OCLS (expr->left->etype);
 
-    /* if address of indexed array */
-    if (IS_AST_OP (expr->left) && expr->left->opval.op == '[')
-      return valForArray (expr->left);
+          val = AST_VALUE (expr->left);
+          val->type = newLink (DECLARATOR);
+          if (sclass == S_CODE)
+            {
+              DCL_TYPE (val->type) = CPOINTER;
+              CodePtrPointsToConst (val->type);
+            }
+          else if (oclass)
+            DCL_TYPE (val->type) = oclass->ptrType;
+          else if (sclass == S_XDATA)
+            DCL_TYPE (val->type) = FPOINTER;
+          else if (sclass == S_DATA)
+            DCL_TYPE (val->type) = POINTER;
+          else if (sclass == S_IDATA)
+            DCL_TYPE (val->type) = IPOINTER;
+          else if (sclass == S_PDATA)
+            DCL_TYPE (val->type) = PPOINTER;
+          else if (sclass == S_XSTACK)
+            DCL_TYPE (val->type) = PPOINTER;
+          else if (sclass == S_EEPROM)
+            DCL_TYPE (val->type) = EEPPOINTER;
+          else
+            DCL_TYPE (val->type) = POINTER;
+          val->type->next = expr->left->ftype;
+          val->etype = getSpec (val->type);
+          return val;
+        }
 
-    /* if address of structure element then
-       case 1. a.b ; */
-    if (IS_AST_OP (expr->left) &&
-        expr->left->opval.op == '.') {
-      return valForStructElem (expr->left->left,
-                               expr->left->right);
-    }
+      /* if address of indexed array */
+      if (IS_AST_OP (expr->left) && expr->left->opval.op == '[')
+        return valForArray (expr->left);
 
-    /* case 2. (&a)->b ;
-       (&some_struct)->element */
-    if (IS_AST_OP (expr->left) &&
-        expr->left->opval.op == PTR_OP &&
-        IS_ADDRESS_OF_OP (expr->left->left)) {
-      return valForStructElem (expr->left->left->left,
-                               expr->left->right);
+      /* if address of structure element then
+         case 1. a.b ; */
+      if (IS_AST_OP (expr->left) &&
+          expr->left->opval.op == '.')
+        {
+          return valForStructElem (expr->left->left, expr->left->right);
+        }
+
+      /* case 2. (&a)->b ;
+         (&some_struct)->element */
+      if (IS_AST_OP (expr->left) &&
+          expr->left->opval.op == PTR_OP &&
+          IS_ADDRESS_OF_OP (expr->left->left))
+        {
+          return valForStructElem (expr->left->left->left, expr->left->right);
+        }
     }
-  }
   /* case 3. (((char *) &a) +/- constant) */
   if (IS_AST_OP (expr) &&
       (expr->opval.op == '+' || expr->opval.op == '-') &&
       IS_AST_OP (expr->left) && expr->left->opval.op == CAST &&
       IS_AST_OP (expr->left->right) &&
       expr->left->right->opval.op == '&' &&
-      IS_AST_LIT_VALUE (expr->right)) {
-
-    return valForCastAggr (expr->left->right->left,
-                           expr->left->left->opval.lnk,
-                           expr->right, expr->opval.op);
-
-  }
+      IS_AST_LIT_VALUE (expr->right))
+    {
+      return valForCastAggr (expr->left->right->left,
+                             expr->left->left->opval.lnk,
+                             expr->right, expr->opval.op);
+    }
   /* case 4. (char *)(array type) */
   if (IS_CAST_OP(expr) && IS_AST_SYM_VALUE (expr->right) &&
-      IS_ARRAY(expr->right->ftype)) {
+      IS_ARRAY(expr->right->ftype))
+    {
+      STORAGE_CLASS sclass = SPEC_SCLS (expr->right->etype);
+      memmap *oclass = SPEC_OCLS (expr->right->etype);
 
-    val = copyValue (AST_VALUE (expr->right));
-    val->type = newLink (DECLARATOR);
-    if (SPEC_SCLS (expr->right->etype) == S_CODE) {
-      DCL_TYPE (val->type) = CPOINTER;
-      CodePtrPointsToConst (val->type);
+      val = copyValue (AST_VALUE (expr->right));
+      val->type = newLink (DECLARATOR);
+      if (SPEC_SCLS (expr->right->etype) == S_CODE)
+        {
+          DCL_TYPE (val->type) = CPOINTER;
+          CodePtrPointsToConst (val->type);
+        }
+      else if (oclass)
+        DCL_TYPE (val->type) = oclass->ptrType;
+      else if (sclass == S_XDATA)
+        DCL_TYPE (val->type) = FPOINTER;
+      else if (sclass == S_DATA)
+        DCL_TYPE (val->type) = POINTER;
+      else if (sclass == S_IDATA)
+        DCL_TYPE (val->type) = IPOINTER;
+      else if (sclass == S_PDATA)
+        DCL_TYPE (val->type) = PPOINTER;
+      else if (sclass == S_XSTACK)
+        DCL_TYPE (val->type) = PPOINTER;
+      else if (sclass == S_EEPROM)
+        DCL_TYPE (val->type) = EEPPOINTER;
+      else
+        DCL_TYPE (val->type) = POINTER;
+      val->type->next = expr->right->ftype->next;
+      val->etype = getSpec (val->type);
+      return val;
     }
-    else if (SPEC_SCLS (expr->right->etype) == S_PDATA)
-      DCL_TYPE (val->type) = PPOINTER;
-    else if (SPEC_SCLS (expr->right->etype) == S_XDATA)
-      DCL_TYPE (val->type) = FPOINTER;
-    else if (SPEC_SCLS (expr->right->etype) == S_XSTACK)
-      DCL_TYPE (val->type) = PPOINTER;
-    else if (SPEC_SCLS (expr->right->etype) == S_IDATA)
-      DCL_TYPE (val->type) = IPOINTER;
-    else if (SPEC_SCLS (expr->right->etype) == S_EEPROM)
-      DCL_TYPE (val->type) = EEPPOINTER;
-    else
-      DCL_TYPE (val->type) = POINTER;
-    val->type->next = expr->right->ftype->next;
-    val->etype = getSpec (val->type);
-    return val;
-  }
  wrong:
   if (expr)
     werrorfl (expr->filename, expr->lineno, E_INCOMPAT_PTYPES);
   else
     werror (E_INCOMPAT_PTYPES);
   return NULL;
-
 }
 
 /*-----------------------------------------------------------------*/
@@ -594,7 +614,7 @@ printPointerType (struct dbuf_s * oBuf, const char *name)
 /*-----------------------------------------------------------------*/
 void
 printGPointerType (struct dbuf_s * oBuf, const char *iname, const char *oname,
-                   const unsigned int type)
+                   int type)
 {
   _printPointerType (oBuf, iname);
   dbuf_printf (oBuf, ",#0x%02x\n", pointerTypeToGPByte (type, iname, oname));
